Closed Bug 288267 Opened 21 years ago Closed 21 years ago

getAttribute("transform") giving back "" for transform="matrix(...)"

Categories

(Core :: SVG, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: kohl, Assigned: jwatt)

Details

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050329 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050329 The example showing this error is a static one - showing, that the completely saved page is showing only an empty transform string. But it seems, the error situation is another as for other related messages from me: getAttribute("transform") is giving back "" after setting transform="matrix(...)", while the expected values may be seen just as expected in internal values Reproducible: Always Steps to Reproduce: 1.load the appended xml-file 2.save page complete 3.view page will show the result (for simplicity I've just expanded the example of error message 288265, but, as said, the error source is expected to be another) Actual Results: transform = "" instead of transform = "matrix( ... )" I wanted to get dynamically produced transform matrix back from DOM using getAttribute("transform"). actually I've token another solution to avoid this problem (Now after some corollary error situations on the way I'm ready to go to the main error for me: dynamically changing the transform attribute is changing internal values, but under some circumstances this is having no effect for the actual picture. Hope, I'm able to show this today ...)
-> svg, I guess (or would this be DOM?)
Assignee: general → general
Component: General → SVG
Product: Mozilla Application Suite → Core
QA Contact: general → ian
Version: unspecified → Trunk
Attached patch patchSplinter Review
Assignee: general → jonathan.watt
Status: UNCONFIRMED → ASSIGNED
Attachment #179039 - Flags: review?(tor)
Oops, I forgot I already had changes in that file. The review request is only for the forgotten 'break' statement, tor.
(In reply to comment #0) > (Now after some corollary error situations on the way I'm ready to go to the > main error for me: dynamically changing the transform attribute is changing > internal values, but under some circumstances this is having no effect for the > actual picture. > Hope, I'm able to show this today ...) Ooops - this last of my "easter eggs" has proofed to be an error in my own sources, not in Mozilla. Simplifying the situation for demonstration purposes has shown that, thanks for the impetus to do that ;-) (the Mozilla error correction process is - beside the one for the pure math software tool GAP - the very best one I ever saw even including the very german procedure for the TR440/TNS440 in the 1970's)
Attachment #179039 - Flags: review?(tor) → review+
Comment on attachment 179039 [details] [diff] [review] patch Checking in mozilla/content/svg/content/src/nsSVGTransform.cpp; /cvsroot/mozilla/content/svg/content/src/nsSVGTransform.cpp,v <-- nsSVGTransform.cpp new revision: 1.14; previous revision: 1.13 done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: