Fixing bug 288267. getAttribute("transform") giving back "" for transform="matrix(...)". r=tor@acm.org